--- a/notebooks/quick_start_with_hugging_face.ipynb
+++ b/notebooks/quick_start_with_hugging_face.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/basavarajmullur/Spring-Boot-JdbcTemplate/blob/master/notebooks/quick_start_with_hugging_face.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "1fgVWTMK9SNz"
       },
       "source": [
@@ -64,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "ZwUUIY0gpY4W"
       },
@@ -85,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "CulOXOrhpY4W"
       },
@@ -117,21 +107,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "YORs_sDfpY4X",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "288bf66f-14b0-4d5d-fef3-1bada6019422"
+        "id": "YORs_sDfpY4X"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "The image processor of type `Gemma3ImageProcessor` is now loaded as a fast processor by default, even if the model checkpoint was saved with a slow processor. This is a breaking change and may produce slightly different outputs. To continue using the slow processor, instantiate this class with `use_fast=False`. \n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import torch\n",
         "from transformers import AutoProcessor, AutoModelForCausalLM\n",
@@ -168,7 +146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "dh1QcEXJT8zj"
       },
@@ -202,11 +180,54 @@
         "from pydantic import BaseModel\n",
         "from typing import Optional\n",
         "import base64\n",
+        "from fastapi import HTTPException\n",
+        "from PIL import Image\n",
+        "import io\n",
+        "import base64\n",
+        "import traceback\n",
+        "import base64\n",
+        "import io\n",
+        "from PIL import Image\n",
+        "\n",
+        "def base64_to_pil(image_base64: str) -> Image.Image:\n",
+        "    \"\"\"\n",
+        "    Convert a base64 string (raw or data URL) into a PIL Image.\n",
+        "\n",
+        "    Supports:\n",
+        "    - Raw base64 (no prefix)\n",
+        "    - data:image/png;base64,...\n",
+        "    - data:image/jpeg;base64,...\n",
+        "    \"\"\"\n",
+        "\n",
+        "    if not image_base64:\n",
+        "        raise ValueError(\"Empty base64 image string\")\n",
+        "\n",
+        "    # Strip data URL prefix if present\n",
+        "    if image_base64.startswith(\"data:\"):\n",
+        "        image_base64 = image_base64.split(\",\", 1)[1]\n",
+        "\n",
+        "    try:\n",
+        "        image_bytes = base64.b64decode(image_base64, validate=True)\n",
+        "    except Exception as e:\n",
+        "        raise ValueError(\"Invalid base64 image data\") from e\n",
+        "\n",
+        "    try:\n",
+        "        image = Image.open(io.BytesIO(image_bytes))\n",
+        "        image = image.convert(\"RGB\")\n",
+        "    except Exception as e:\n",
+        "        raise ValueError(\"Decoded bytes are not a valid image\") from e\n",
+        "\n",
+        "    return image\n",
         "\n",
         "class AnalyzeRequest(BaseModel):\n",
         "    prompt: str\n",
         "    image_base64: str\n",
         "    max_tokens: int = 512\n",
+        "\n",
+        "def decode_base64_image(data_url: str) -> bytes:\n",
+        "    if \",\" in data_url:\n",
+        "        data_url = data_url.split(\",\", 1)[1]\n",
+        "    return base64.b64decode(data_url)\n",
         "\n",
         "app = FastAPI(title=\"ClinIQ – MedGemma API\")\n",
         "\n",
@@ -231,55 +252,61 @@
         "}\n",
         "\"\"\"\n",
         "@app.post(\"/debug\")\n",
-        "def debug(req: AnalyzeRequest):\n",
-        "    return {\n",
-        "        \"prompt_len\": len(req.prompt),\n",
-        "        \"image_base64_present\": req.image_base64 is not None,\n",
-        "        \"image_base64_len\": len(req.image_base64),\n",
-        "        \"max_tokens\": req.max_tokens,\n",
-        "        \"base64_prefix\": req.image_base64[:30],  # sanity check\n",
-        "    }\n",
         "\n",
-        "@app.post(\"/analyze\")\n",
-        "async def analyze(\n",
-        "    image: UploadFile,\n",
-        "    clinical_question: str = Form(...)\n",
-        "):\n",
-        "    img_bytes = await image.read()\n",
-        "    img = Image.open(io.BytesIO(img_bytes)).convert(\"RGB\")\n",
+        "def run_medgemma(image, prompt, max_tokens):\n",
+        "    # 🔒 Force exactly ONE image token\n",
+        "    clean_prompt = prompt.replace(\"<image>\", \"\").strip()\n",
+        "    final_prompt = f\"<image>\\n{clean_prompt}\"\n",
         "\n",
-        "    full_prompt = f\"\"\"\n",
-        "Return ONLY valid JSON.\n",
+        "    # 🔍 HARD DEBUG (DO NOT REMOVE YET)\n",
+        "    print(\"===== GEMMA PROMPT DEBUG =====\")\n",
+        "    print(repr(final_prompt))\n",
+        "    print(\"Contains <image>:\", \"<image>\" in final_prompt)\n",
+        "    print(\"Image type:\", type(image))\n",
+        "    print(\"================================\")\n",
         "\n",
-        "{SYSTEM_PROMPT}\n",
-        "\n",
-        "Clinical question:\n",
-        "{clinical_question}\n",
-        "\"\"\"\n",
+        "    # 🚨 Absolute safety check\n",
+        "    if \"<image>\" not in final_prompt:\n",
+        "        raise ValueError(\"FATAL: <image> token missing before processor\")\n",
         "\n",
         "    inputs = processor(\n",
-        "        images=img,\n",
-        "        text=full_prompt,\n",
+        "        text=final_prompt,\n",
+        "        images=[image],          # 👈 MUST be a list\n",
         "        return_tensors=\"pt\"\n",
-        "    ).to(model.device)\n",
+        "    )\n",
+        "\n",
+        "    inputs = {k: v.to(model.device) for k, v in inputs.items()}\n",
         "\n",
         "    with torch.no_grad():\n",
-        "        output_ids = model.generate(\n",
+        "        outputs = model.generate(\n",
         "            **inputs,\n",
-        "            max_new_tokens=512,\n",
-        "            temperature=0.4\n",
+        "            max_new_tokens=max_tokens,\n",
+        "            do_sample=False\n",
         "        )\n",
         "\n",
-        "    text = processor.decode(output_ids[0], skip_special_tokens=True)\n",
+        "    return processor.decode(outputs[0], skip_special_tokens=True)\n",
         "\n",
-        "    # enforce JSON safety\n",
+        "\n",
+        "\n",
+        "@app.post(\"/analyze\")\n",
+        "def analyze(req: AnalyzeRequest):\n",
         "    try:\n",
-        "        return json.loads(text)\n",
-        "    except Exception:\n",
-        "        return {\n",
-        "            \"error\": \"Model did not return valid JSON\",\n",
-        "            \"raw_output\": text\n",
-        "        }\n",
+        "        image_bytes = decode_base64_image(req.image_base64)\n",
+        "        image = Image.open(io.BytesIO(image_bytes)).convert(\"RGB\")\n",
+        "\n",
+        "        result = run_medgemma(\n",
+        "            image=image,\n",
+        "            prompt=req.prompt,\n",
+        "            max_tokens=req.max_tokens\n",
+        "        )\n",
+        "\n",
+        "        return {\"response\": result}\n",
+        "\n",
+        "    except Exception as e:\n",
+        "        print(\"❌ ANALYZE FAILED\")\n",
+        "        traceback.print_exc()\n",
+        "        raise HTTPException(status_code=422, detail=str(e))\n",
+        "\n",
         "\n"
       ]
     },
@@ -295,7 +322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "qunAkiKspY4X"
       },
@@ -342,16 +369,64 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 7,
       "metadata": {
         "id": "UterxS4WpY4X",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 251
+          "height": 879
         },
-        "outputId": "5ef3a6fb-abfa-48e4-c2ba-aa9fa71bc5f3"
+        "outputId": "a451d2c3-a00b-4e2f-a36a-f0db5b608c02"
       },
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2026-02-05T15:53:43Z INF Thank you for trying Cloudflare Tunnel. Doing so, without a Cloudflare account, is a quick way to experiment and try it out. However, be aware that these account-less Tunnels have no uptime guarantee, are subject to the Cloudflare Online Services Terms of Use (https://www.cloudflare.com/website-terms/), and Cloudflare reserves the right to investigate your use of Tunnels for violations of such terms. If you intend to use Tunnels in production you should use a pre-created named tunnel by following: https://developers.cloudflare.com/cloudflare-one/connections/connect-apps\n",
+            "2026-02-05T15:53:43Z INF Requesting new quick Tunnel on trycloudflare.com...\n",
+            "\n",
+            "🌍 COPY THIS URL ↑↑↑\n",
+            "\n",
+            "2026-02-05T15:53:45Z INF +--------------------------------------------------------------------------------------------+\n",
+            "2026-02-05T15:53:45Z INF |  Your quick Tunnel has been created! Visit it at (it may take some time to be reachable):  |\n",
+            "2026-02-05T15:53:45Z INF |  https://baltimore-webmasters-nothing-terrorist.trycloudflare.com                          |\n",
+            "\n",
+            "🌍 COPY THIS URL ↑↑↑\n",
+            "\n",
+            "2026-02-05T15:53:45Z INF +--------------------------------------------------------------------------------------------+\n",
+            "2026-02-05T15:53:45Z INF Cannot determine default configuration path. No file [config.yml config.yaml] in [~/.cloudflared ~/.cloudflare-warp ~/cloudflare-warp /etc/cloudflared /usr/local/etc/cloudflared]\n",
+            "2026-02-05T15:53:45Z INF Version 2026.1.2 (Checksum e157c54e929cc289cbd53860453168c2fe3439eb55e2e965a56579252585d9c1)\n",
+            "2026-02-05T15:53:45Z INF GOOS: linux, GOVersion: go1.24.11, GoArch: amd64\n",
+            "2026-02-05T15:53:45Z INF Settings: map[ha-connections:1 no-autoupdate:true p:http2 protocol:http2 url:http://127.0.0.1:8000]\n",
+            "2026-02-05T15:53:45Z INF Generated Connector ID: 954ff749-dde6-45ab-a0b9-62f56ecc00a4\n",
+            "2026-02-05T15:53:45Z INF Initial protocol http2\n",
+            "2026-02-05T15:53:45Z INF ICMP proxy will use 172.28.0.12 as source for IPv4\n",
+            "2026-02-05T15:53:45Z INF ICMP proxy will use ::1 in zone lo as source for IPv6\n",
+            "2026-02-05T15:53:45Z INF ICMP proxy will use 172.28.0.12 as source for IPv4\n",
+            "2026-02-05T15:53:45Z INF ICMP proxy will use ::1 in zone lo as source for IPv6\n",
+            "2026-02-05T15:53:45Z INF Starting metrics server on 127.0.0.1:20241/metrics\n",
+            "2026-02-05T15:53:45Z INF Registered tunnel connection connIndex=0 connection=ecb1f50b-7ca0-4d1c-a9da-a857539568a2 event=0 ip=198.41.192.107 location=sea01 protocol=http2\n",
+            "❌ ANALYZE FAILED\n",
+            "INFO:     49.207.147.92:0 - \"POST /analyze HTTP/1.1\" 422 Unprocessable Entity\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Traceback (most recent call last):\n",
+            "  File \"/tmp/ipython-input-970128221.py\", line 111, in analyze\n",
+            "    result = run_medgemma(\n",
+            "             ^^^^^^^^^^^^^\n",
+            "  File \"/tmp/ipython-input-970128221.py\", line 87, in run_medgemma\n",
+            "    inputs = processor(\n",
+            "             ^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/transformers/models/gemma3/processing_gemma3.py\", line 109, in __call__\n",
+            "    raise ValueError(\n",
+            "ValueError: Prompt contained 0 image tokens but received 1 images.\n"
+          ]
+        },
         {
           "output_type": "error",
           "ename": "KeyboardInterrupt",
@@ -360,7 +435,6 @@
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
             "\u001b[0;32m/tmp/ipython-input-2620496088.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m )\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mprocess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdout\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;34m\"trycloudflare.com\"\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/lib/python3.12/codecs.py\u001b[0m in \u001b[0;36mdecode\u001b[0;34m(self, input, final)\u001b[0m\n",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
@@ -393,8 +467,7 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "display_name": "Python 3",
