--- a/notebooks/quick_start_with_hugging_face.ipynb
+++ b/notebooks/quick_start_with_hugging_face.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/basavarajmullur/Spring-Boot-JdbcTemplate/blob/master/notebooks/quick_start_with_hugging_face.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "1fgVWTMK9SNz"
       },
       "source": [
@@ -54,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "ZwUUIY0gpY4W"
       },
@@ -75,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "CulOXOrhpY4W"
       },
@@ -146,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "dh1QcEXJT8zj"
       },
@@ -322,7 +332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "qunAkiKspY4X"
       },
@@ -374,59 +384,11 @@
         "id": "UterxS4WpY4X",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 879
+          "height": 216
         },
-        "outputId": "a451d2c3-a00b-4e2f-a36a-f0db5b608c02"
+        "outputId": "3ed322bd-c7f0-48b0-aa83-0b7a5685cc2b"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2026-02-05T15:53:43Z INF Thank you for trying Cloudflare Tunnel. Doing so, without a Cloudflare account, is a quick way to experiment and try it out. However, be aware that these account-less Tunnels have no uptime guarantee, are subject to the Cloudflare Online Services Terms of Use (https://www.cloudflare.com/website-terms/), and Cloudflare reserves the right to investigate your use of Tunnels for violations of such terms. If you intend to use Tunnels in production you should use a pre-created named tunnel by following: https://developers.cloudflare.com/cloudflare-one/connections/connect-apps\n",
-            "2026-02-05T15:53:43Z INF Requesting new quick Tunnel on trycloudflare.com...\n",
-            "\n",
-            "🌍 COPY THIS URL ↑↑↑\n",
-            "\n",
-            "2026-02-05T15:53:45Z INF +--------------------------------------------------------------------------------------------+\n",
-            "2026-02-05T15:53:45Z INF |  Your quick Tunnel has been created! Visit it at (it may take some time to be reachable):  |\n",
-            "2026-02-05T15:53:45Z INF |  https://baltimore-webmasters-nothing-terrorist.trycloudflare.com                          |\n",
-            "\n",
-            "🌍 COPY THIS URL ↑↑↑\n",
-            "\n",
-            "2026-02-05T15:53:45Z INF +--------------------------------------------------------------------------------------------+\n",
-            "2026-02-05T15:53:45Z INF Cannot determine default configuration path. No file [config.yml config.yaml] in [~/.cloudflared ~/.cloudflare-warp ~/cloudflare-warp /etc/cloudflared /usr/local/etc/cloudflared]\n",
-            "2026-02-05T15:53:45Z INF Version 2026.1.2 (Checksum e157c54e929cc289cbd53860453168c2fe3439eb55e2e965a56579252585d9c1)\n",
-            "2026-02-05T15:53:45Z INF GOOS: linux, GOVersion: go1.24.11, GoArch: amd64\n",
-            "2026-02-05T15:53:45Z INF Settings: map[ha-connections:1 no-autoupdate:true p:http2 protocol:http2 url:http://127.0.0.1:8000]\n",
-            "2026-02-05T15:53:45Z INF Generated Connector ID: 954ff749-dde6-45ab-a0b9-62f56ecc00a4\n",
-            "2026-02-05T15:53:45Z INF Initial protocol http2\n",
-            "2026-02-05T15:53:45Z INF ICMP proxy will use 172.28.0.12 as source for IPv4\n",
-            "2026-02-05T15:53:45Z INF ICMP proxy will use ::1 in zone lo as source for IPv6\n",
-            "2026-02-05T15:53:45Z INF ICMP proxy will use 172.28.0.12 as source for IPv4\n",
-            "2026-02-05T15:53:45Z INF ICMP proxy will use ::1 in zone lo as source for IPv6\n",
-            "2026-02-05T15:53:45Z INF Starting metrics server on 127.0.0.1:20241/metrics\n",
-            "2026-02-05T15:53:45Z INF Registered tunnel connection connIndex=0 connection=ecb1f50b-7ca0-4d1c-a9da-a857539568a2 event=0 ip=198.41.192.107 location=sea01 protocol=http2\n",
-            "❌ ANALYZE FAILED\n",
-            "INFO:     49.207.147.92:0 - \"POST /analyze HTTP/1.1\" 422 Unprocessable Entity\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Traceback (most recent call last):\n",
-            "  File \"/tmp/ipython-input-970128221.py\", line 111, in analyze\n",
-            "    result = run_medgemma(\n",
-            "             ^^^^^^^^^^^^^\n",
-            "  File \"/tmp/ipython-input-970128221.py\", line 87, in run_medgemma\n",
-            "    inputs = processor(\n",
-            "             ^^^^^^^^^^\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/transformers/models/gemma3/processing_gemma3.py\", line 109, in __call__\n",
-            "    raise ValueError(\n",
-            "ValueError: Prompt contained 0 image tokens but received 1 images.\n"
-          ]
-        },
         {
           "output_type": "error",
           "ename": "KeyboardInterrupt",
@@ -467,7 +429,8 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
